trying to fix mobile overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -52,22 +52,23 @@ body {
 
     @media only screen and (max-width: 500px) {
         display: flex;
+        flex-direction: column-reverse;
         position: relative;
         height: 50vh;
-        margin: 0 auto;
-        width: 90%;
-        margin-bottom: 100px;
+        margin: 100px 0;
+        width: 80%;
     }
 
     .hero__img {
         display: flex;
         justify-content: center;
-        height: 100vh;
+        height: auto;
         width: 60%;
 
         @media only screen and (max-width: 500px) {
             width: 80%;
             margin: 0 auto;
+            display: none;
         }
 
         img {
@@ -83,15 +84,18 @@ body {
         padding-left: 50px;
 
         @media only screen and (max-width: 500px) {
-            position: absolute;
-            top: 10vh;
             width: 80%;
-            margin: 0 auto;
+            margin: 0;
+            padding: 0;
         }
 
         h1 {
             color: $primaryBlue;
             margin-bottom: 30px;
+
+            @media only screen and (max-width: 500px) {
+                font-size: 1.2rem;
+            }
         }
 
         p {
