--- a/src/assets/styles/base/_resets.scss
+++ b/src/assets/styles/base/_resets.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/variables';
+
 * {
     margin: 0;
     padding: 0;
@@ -20,6 +22,7 @@ button {
 a {
     cursor: pointer;
     text-decoration: none;
+    color: $midGrey;
 }
 
 li {
