--- a/src/components/CityCard/CityCard.module.scss
+++ b/src/components/CityCard/CityCard.module.scss
@@ -5,8 +5,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 300px;
     padding: 25px;
+
+    @media only screen and (max-width: 500px) {
+        width: 90%;
+        margin: 0 auto;
+    }
 
     .cityHeader {
         display: flex;
@@ -35,7 +39,7 @@
         margin: 50px 0;
 
         img {
-            width: 80%;
+            width: 300px;
             margin: 0 auto;
         }
     }
